[package]
name = "proximo"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/corasan/proximo-ci.git"
keywords = ["cli", "next", "ci"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.8", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3" }
prettylog = "0.1.4"
regex = "1"
