[package]
name = "proxim"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/corasan/proxim-ci.git"
keywords = ["cli", "next", "ci"]
categories = ["command-line-utilities"]
description = "Simple command line tool built with Rust to automatically pull from GitHub on push and run next.js build."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.8", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
structopt = { version = "0.3" }
prettylog = "0.1.4"
